# kanboard-qa-automation

./: .gitignore  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/: workflows.yml
config/: config.py
pages/: base_page.py  login_page.py  project_dashboard_page.py  project_page.py  task_page.py
tests/: test_data_integrity.py  test_performance.py  test_project_creation.py  test_task_lifecycle.py
utilities/: constants.py  database.py  helpers.py
